p2/confs/app-three.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.10
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-three-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: app-three
