p2/confs/app-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.10
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: app-two
